deploy/k8s/spark/new-wait-for-mongo.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    cni.projectcalico.org/containerID: 8c768e42b06f4273e3bb1254dfee577ed72d1797c0bf420d4aa7df06fcf21982
    cni.projectcalico.org/podIP: 192.168.109.151/32
    cni.projectcalico.org/podIPs: 192.168.109.151/32
    rollme: 4MQl1
  creationTimestamp: "2025-03-27T21:01:44Z"
  generateName: ilum-core-69d448c4c9-
  labels:
    app: ilum-core
    ilum.prometheus: "true"
    pod-template-hash: 69d448c4c9
  name: ilum-core-69d448c4c9-7mwg2
  namespace: ilum
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: ilum-core-69d448c4c9
    uid: 65498312-f113-4b1d-8961-9e3cf435bf20
  resourceVersion: "22719132"
  uid: 70181654-eec9-4ef0-aa33-6c34d7003250
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/arch
            operator: In
            values:
            - amd64
            - arm64
  containers:
  - env:
    - name: ILUM_KUBERNETES_INITCLUSTERONSTARTUP
      value: "true"
    - name: ILUM_KUBERNETES_UPGRADECLUSTERONSTARTUP
      value: "false"
    - name: ILUM_SPARKNAMESPACE
      value: ilum
    - name: ILUM_KUBERNETES_API_URL
      value: https://kubernetes.default.svc
    - name: ILUM_KUBERNETES_CONTAINER_IMAGE
      value: ilum/spark:3.5.3-delta
    - name: ILUM_SERVICE_ACCOUNT_NAME
      value: ilum-core-spark
    - name: DEFAULT_JAVA_OPTS
    image: ilum/core:6.3.1
    imagePullPolicy: IfNotPresent
    livenessProbe:
      failureThreshold: 3
      httpGet:
        path: /api/dev/reactive/health
        port: http
        scheme: HTTP
      initialDelaySeconds: 60
      periodSeconds: 10
      successThreshold: 1
      timeoutSeconds: 1
    name: ilum-core
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
    readinessProbe:
      failureThreshold: 3
      httpGet:
        path: /api/dev/reactive/health
        port: http
        scheme: HTTP
      initialDelaySeconds: 60
      periodSeconds: 10
      successThreshold: 1
      timeoutSeconds: 1
    resources:
      limits:
        memory: 2Gi
      requests:
        memory: 1Gi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /config
      name: application-config
    - mountPath: /tmp/pod-template
      name: spark-submit-pod-template
    - mountPath: /tmp/cronjob-template
      name: schedule-cronjob-template
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-mdzzt
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: acmeorg-cluster-2
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: ilum-core-spark
  serviceAccountName: ilum-core-spark
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - configMap:
      defaultMode: 420
      name: ilum
    name: application-config
  - configMap:
      defaultMode: 420
      name: ilum-spark-submit-pt
    name: spark-submit-pod-template
  - configMap:
      defaultMode: 420
      name: ilum-schedule-cronjob
    name: schedule-cronjob-template
  - name: kube-api-access-mdzzt
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2025-03-27T21:01:44Z"
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2025-03-27T21:01:44Z"
    message: 'containers with incomplete status: [wait-for-mongo wait-for-minio]'
    reason: ContainersNotInitialized
    status: "False"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2025-03-27T21:01:44Z"
    message: 'containers with unready status: [ilum-core]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2025-03-27T21:01:44Z"
    message: 'containers with unready status: [ilum-core]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2025-03-27T21:01:44Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - image: ilum/core:6.3.1
    imageID: ""
    lastState: {}
    name: ilum-core
    ready: false
    restartCount: 0
    started: false
    state:
      waiting:
        reason: PodInitializing
    volumeMounts:
    - mountPath: /config
      name: application-config
    - mountPath: /tmp/pod-template
      name: spark-submit-pod-template
    - mountPath: /tmp/cronjob-template
      name: schedule-cronjob-template
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-mdzzt
      readOnly: true
      recursiveReadOnly: Disabled
  hostIP: 148.113.189.55
  hostIPs:
  - ip: 148.113.189.55
  initContainerStatuses:
  - containerID: cri-o://073c5001258d29af9262a487ea13c82e6fc302ed23c21839a4732d1fc7d48262
    image: docker.io/ilum/mongodb:6.0.5
    imageID: docker.io/ilum/mongodb@sha256:42b6d774c37dab8cb2a55a8a476281e56bb0eedd707c75956c7061c5904a1859
    lastState: {}
    name: wait-for-mongo
    ready: false
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2025-03-27T21:01:44Z"
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-mdzzt
      readOnly: true
      recursiveReadOnly: Disabled
  - image: curlimages/curl:8.5.0
    imageID: ""
    lastState: {}
    name: wait-for-minio
    ready: false
    restartCount: 0
    started: false
    state:
      waiting:
        reason: PodInitializing
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-mdzzt
      readOnly: true
      recursiveReadOnly: Disabled
  phase: Pending
  podIP: 192.168.109.151
  podIPs:
  - ip: 192.168.109.151
  qosClass: Burstable
  startTime: "2025-03-27T21:01:44Z"
